# VideoHostingGigaChatSaaS

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  auth.py  db.py  giga.py  schemas.py  storage.py
